<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_query"
    android:padding="16dp"
    tools:context=".Querying_date">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/QueryingDateBackMenu"
            android:layout_width="48dp"
            android:contentDescription="@string/page"
            android:background="@drawable/ic_back"
            android:layout_height="48dp"/>
        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/querying_date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consult_date" />

        <EditText
            android:layout_gravity="center"
            android:inputType="date"
            android:id="@+id/editTextDate"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="300dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_height="48dp"
            android:background="@drawable/rounded_input_text"
            android:hint="(YYYY-MM-DD)" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera" />
        <Spinner
            android:layout_gravity="center"
            android:id="@+id/spnCameraDate"
            android:layout_width="300dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="48dp"
            android:entries="@array/camaras"
            android:background="@drawable/style_spinner"
            android:hint="Cámara" />
    </LinearLayout>
    <TextView
        android:id="@+id/descripcionCameraDate"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page" />
        <EditText
            android:layout_gravity="center"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/editTextPage"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_input_text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/page" />
    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:id="@+id/buttonSearch"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/launch" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:id="@+id/recyclerViewPhotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
